--- a/mjdown.html
+++ b/mjdown.html
@@ -13,16 +13,16 @@ body {background-color:#BBBBff;}
 </head>
 
 <body>
- <p style="text-align:center; font-size:56px;" ><tt><strong>苹果安卓下载页面</strong></tt></p>
+ <p style="text-align:center; font-size:56px;" ><tt><strong>俏游麻将下载页面</strong></tt></p>
 <div align="center"> 
-<img src="AppIcon60x60@2x.png"  width="30%" align="middle" />
+<img src="http://114.55.109.72:8094/download/mj/AppIcon60x60@2x.png"  width="30%" align="middle" />
 <div/> 
 <BR>
 <span class="p1"><BR> 
  <p style="text-align:center;font-size: 48px;color:#FF0000;" ><tt><strong>请在浏览器中打开</strong></tt></p>
 </span>
  <p style="text-align:center;font-size: 42px;color:#2222FF;" ><tt><strong>点击以下图片下载↓</strong></tt></p>
-<a id="J_weixin" class="android-btn" href="down.html"><img src="download.png" alt="点击下载" alt="安卓版下载" /></a> 
+<a id="J_weixin" class="android-btn" href="http://114.55.109.72:8094/download/mj/down.html"><img src="http://114.55.109.72:8094/download/mj/download.png" alt="点击下载" alt="安卓版下载" /></a> 
 <div id="weixin-tip"><p><img src="live_weixin800.png" alt="微信扫描打开APP下载链接提示代码优化" alt="微信打开"/>
 <span id="close" title="关闭" class="close">×</span></p></div>
 <script type="text/javascript">
